src/objects/Int_Batch_Exception_Log__c.object
<CustomObject>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Type__c</fullName>
        <label>Execution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CREATE DMBI RECORDS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Run_Date__c</fullName>
        <label>Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Int Batch Exception Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Exception__c</columns>
        <columns>Execution_Type__c</columns>
        <columns>Run_Date__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Int Batch Exception Log	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Int Batch Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>